--- a/test-2.html
+++ b/test-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <script src='vendor/three.js/build/three.min.js'></script>
 <script src='vendor/three.js/build/OrbitControls.js'></script>
-<script src='./threex.planets.js'></script>
+<script src='./threex-2.planets.js'></script>
 <body style='margin: 0px; background-color: #000000; overflow: hidden;'><script>
 	var renderer	= new THREE.WebGLRenderer({
 		antialias	: true
@@ -15,16 +15,16 @@
 	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.01, 100 );
 	camera.position.z = 0.75;
 
-	var light	= new THREE.AmbientLight( 0xeeeeee, 0.7 )
+	var light	= new THREE.AmbientLight( 0x333333, 2)
 	scene.add( light )
 	// var light	= new THREE.DirectionalLight( 'white', 1)
 	// light.position.set(5,5,5)
 	// light.target.position.set( 0, 0, 0 )
 	// scene.add( light )
 
-	var lightDirect	= new THREE.DirectionalLight( 0xeeeeee, 0.2 )
+	var lightDirect	= new THREE.DirectionalLight( 0xeeeeee, 0.1 )
 	lightDirect.position.set(15,15,15)
-	// scene.add( lightDirect )
+	scene.add( lightDirect )
 	lightDirect.castShadow	= true
 	lightDirect.shadowCameraNear	= 0.01
 	lightDirect.shadowCameraFar	= 15
